Create menu items on load with js

--- a/projects/pizzaChart/index.html
+++ b/projects/pizzaChart/index.html
@@ -7,7 +7,7 @@
     <link href="./styles.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -16,16 +16,14 @@
     </header>
     <main>
       <div class="pizzas">
-        <article class="pizza">
-          <img class="pizza--img" src="./assets/pizza.png" alt="pizza">
-          <div class="pizzas--description">
-            <h2 class="description--title">Margarita</h2>
-            <p class="description--text">Medium | Chese, onion, and tomato pure</p>
-            <p class="description--price">$12</p>
-            <button class="description--add"><img src="./assets/plus.png" alt="add pizza">ADD</button>
-          </div>
-        </article>
-      </div>
+      </div> 
+      <footer class="footer">
+        <button id="takeOrder">TAKE THE ORDER</button>
+        <p class="footer--price">
+          Item Total <br> 
+          <span class="price--amount">$13.50</span>
+        </p>
+      </footer>
     </main>
     <script src="./main.js">
     </script>
