Created a new branch and a text file

--- a/projects/pizzaChart/index.html
+++ b/projects/pizzaChart/index.html
@@ -25,6 +25,13 @@
         </p>
       </footer>
     </main>
+    <div class="order--popup">
+      <div class="popup--container">
+        <p class="popup--paragraph"></p>
+        <p class="popup--price">12,50</p>
+        <button id="popup--checkout">Confirmar Pedido</button>
+      </div>
+        </div>
     <script src="./main.js">
     </script>
   </body>
